# Modulo1-Chatbot

./: .env  README.md  app.py  pyproject.toml
chroma_langchain_db/5a85c1c7-6b03-48c2-90a2-6c987dafac61/: index_metadata.pickle
