[project]
name = "chatbot-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "fitz>=0.0.1.dev2",
    "ipython>=9.2.0",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.24",
    "langchain-ollama>=0.3.3",
    "langgraph>=0.4.5",
    "langsmith>=0.3.42",
    "ollama>=0.4.8",
    "pandas>=2.2.3",
    "plotly>=6.1.0",
    "protobuf==3.20.3",
    "pypdf>=5.5.0",
    "streamlit>=1.45.1",
    "watchdog>=6.0.0",
]
